<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut android:shortcutId="slap" android:enabled="true" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/s_slap">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="me.crcmz.app" android:targetClass="me.crcmz.app.LauncherActivity" android:data="https://app.crcmz.me/app/slap" />
    </shortcut>
    <shortcut android:shortcutId="watch" android:enabled="true" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/s_watch">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="me.crcmz.app" android:targetClass="me.crcmz.app.LauncherActivity" android:data="https://app.crcmz.me/app/watch" />
    </shortcut>
    <shortcut android:shortcutId="huddle" android:enabled="true" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/s_huddle">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="me.crcmz.app" android:targetClass="me.crcmz.app.LauncherActivity" android:data="https://app.crcmz.me/app/huddle" />
    </shortcut>
    <shortcut android:shortcutId="clips" android:enabled="true" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/s_clips">
        <intent android:action="android.intent.action.VIEW" android:targetPackage="me.crcmz.app" android:targetClass="me.crcmz.app.LauncherActivity" android:data="https://app.crcmz.me/app/clips" />
    </shortcut>
</shortcuts>
